Bug 408783 - Virtual desktop pager doesn't reflect row change immidiately
Summary: Virtual desktop pager doesn't reflect row change immidiately
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.16.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-16 14:49 UTC by manuelchaves
Modified: 2020-03-24 08:15 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manuelchaves 2019-06-16 14:49:57 UTC
STEPS TO REPRODUCE
1. Open virtual desktop settings and change the row number 
2. Click apply or ok.

OBSERVED RESULT
The pager doesn't reflect the correct layout.
I tried doing some more tests, and changing the row actually changed the layout but for the WRONG number of rows, the previously used one.
For instance if the pager has 4 horizontal blocks (row:1) while the row config is actually 2, and then I change it to 2, and the pager display a 4 grid.
Adding or removing desktops fixes the pager layout instantly (makes it update).

EXPECTED RESULT
It should reflect the current row layout.


KDE Plasma Version: 5.16.0
Comment 1 manuelchaves 2019-06-16 14:51:20 UTC
"For instance if the pager has 4 horizontal blocks (row:1) while the row config is actually 2, and then I change it to 2, and the pager display a 4 grid."

Badly explained there. What I mean is that when I hit apply or Ok, it updates the pager but on the previous setting.
Comment 2 Patrick Silva 2020-02-12 18:29:05 UTC
Same problem on Plasma 5.18.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 3 popov895 2020-03-23 09:57:24 UTC
https://streamable.com/x7p3n
Comment 4 Kai Uwe Broulik 2020-03-23 10:34:52 UTC
It listens for KWin reconfiguring, which happens when adding/removing desktops but not when just changing the number of rows, rather than the rowsChanged signal.
Comment 5 Kai Uwe Broulik 2020-03-23 10:38:57 UTC
Please try this patch https://phabricator.kde.org/D28216
Comment 6 Kai Uwe Broulik 2020-03-24 08:15:51 UTC
Git commit bf28d5d2b4f45108db65fe72d7efbdbdc23a5dc6 by Kai Uwe Broulik.
Committed on 24/03/2020 at 08:15.
Pushed by broulik into branch 'Plasma/5.18'.

[VirtualDesktopInfo] Connect to rowsChanged singal

Rather than relying on KWin to have reconfigured, which isn't the case when merely changing the number of rows.
FIXED-IN: 5.18.4

Differential Revision: https://phabricator.kde.org/D28216

M  +4    -1    libtaskmanager/virtualdesktopinfo.cpp

https://commits.kde.org/plasma-workspace/bf28d5d2b4f45108db65fe72d7efbdbdc23a5dc6