[VirtualDesktopInfo] Connect to rowsChanged singal

Rather than relying on KWin to have reconfigured, which isn't the case when merely changing the number of rows.

BUG: 408783
FIXED-IN: 5.18.4

Differential Revision: https://phabricator.kde.org/D28216